Fixes flex overflow issue

--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -34,6 +34,10 @@
   width: 100%;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 /*
  * Type Helpers
  */
